<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pembe"
        android:orientation="vertical"
        tools:context=".Tarife">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PLANLAR"
            android:textAlignment="center"
            android:textColor="@color/mor"
            android:textSize="34sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            android:background="@drawable/textview_bg"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/tarife1"
                android:orientation="vertical">

                <EditText
                    android:autofillHints="Fremium"
                    android:id="@+id/editTextTextMultiLine2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/freemium"
                    android:inputType="textMultiLine"
                    android:text="@string/freemium"
                    android:textAlignment="center"
                    android:textColor="@color/pembe"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dilyok"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/uy"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ay"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button2"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_weight="1"
                    android:background="@color/morumsu"
                    android:backgroundTintMode="add"
                    android:text="HEMEN ÜCRETSİZ KAYIT OL"
                    android:textColor="@color/white" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            android:background="@drawable/tarife2"
            app:cardElevation="10dp"
            android:layout_marginBottom="150dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/tarife2"
                android:orientation="vertical">

                <EditText
                    android:autofillHints="premium"
                    android:id="@+id/editTextTextMultiLine3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/premium"
                    android:inputType="textMultiLine"
                    android:text="@string/premium"
                    android:textAlignment="center"
                    android:textColor="@color/pembe"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dilvar"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/uv"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/av"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button3"
                    android:layout_width="210dp"
                    android:layout_marginStart="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tarife2"
                    android:backgroundTint="@color/mor"
                    android:text="@string/hemen"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>