<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollVİew"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pembe"
        android:orientation="vertical"
        tools:context=".kayitol">

        <EditText

            android:id="@+id/editTextTextMultiLine4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/morumsu"
            android:ems="10"

            android:inputType="textMultiLine"
            android:singleLine="true"
            android:text="Kayıt ol"
            android:textAlignment="center"
            android:textColor="@color/morumsu"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.072" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-medium"
            android:text="KullanıcıAdı"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/morumsu"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
            app:layout_constraintVertical_bias="0.003" />

        <EditText
            android:layout_marginStart="20dp"
            android:id="@+id/editTextText5"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/turuncu"
            android:ems="10"
            android:hint="@string/kuulanıcı"
            android:inputType="text"
            android:lineSpacingExtra="8sp"
            android:textColor="@color/turuncu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.217"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="E-Mail"
            android:textAllCaps="false"
            android:textColor="@color/morumsu"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <EditText
            android:layout_marginStart="20dp"
            android:id="@+id/editTextText6"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/turuncu"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:lineSpacingExtra="8sp"
            android:textColor="@color/turuncu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.217"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-medium"
            android:text="Şifre"
            android:textAllCaps="false"
            android:textColor="@color/morumsu"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
            app:layout_constraintVertical_bias="0.003" />

        <EditText
            android:layout_marginStart="20dp"
            android:id="@+id/editTextText7"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/turuncu"
            android:ems="10"
            android:hint="@string/kuulanıcı"
            android:inputType="text"
            android:lineSpacingExtra="8sp"
            android:textColor="@color/turuncu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.217"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="Şifre tekrar"
            android:textAllCaps="false"
            android:textColor="@color/morumsu"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <EditText
            android:layout_marginStart="20dp"
            android:id="@+id/editTextText8"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/turuncu"
            android:ems="10"
            android:hint="@string/sifren"
            android:inputType="text"
            android:lineSpacingExtra="8sp"
            android:textColor="@color/turuncu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.217"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <CheckBox android:layout_marginStart="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"></CheckBox>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/şartlar"></TextView>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="100dp"

            android:background="@drawable/button_bg"
            android:text="@string/kayıtoll" />
    </LinearLayout>
</ScrollView>