<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pembe"
        android:orientation="vertical"
        tools:context=".Sifremiunuttum">


        <EditText
            android:id="@+id/editTextTextMultiLine6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:backgroundTint="@color/morumsu"

            android:ems="10"
            android:inputType="textMultiLine"
            android:singleLine="true"
            android:text="Şifreni Sınıfırla"
            android:textAlignment="center"
            android:textColor="@color/morumsu"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.072" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="E-Mail"
            android:textAllCaps="false"
            android:textColor="@color/morumsu"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <EditText
            android:id="@+id/editTextText9"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/turuncu"
            android:ems="10"
            android:hint="@string/sifren"
            android:inputType="text"
            android:lineSpacingExtra="8sp"
            android:text="@string/email"
            android:textColor="@color/turuncu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.217"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="E-mail Tekrar"
            android:textAllCaps="false"
            android:textColor="@color/morumsu"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
            app:layout_constraintVertical_bias="0.003" />

        <EditText
            android:id="@+id/editTextText10"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/turuncu"
            android:ems="10"
            android:hint="@string/kuulanıcı"
            android:inputType="text"
            android:lineSpacingExtra="8sp"
            android:text="E-mailinizi tekrar giriniz."
            android:textColor="@color/turuncu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.217"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttongiris3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="180dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="Doğrulama kodunu gönder"
            android:textColor="@color/mor"
            app:circularflow_defaultRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText2"
            app:layout_constraintVertical_bias="0.5"
            app:rippleColor="@color/mor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            android:background="@color/pembe"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />
    </LinearLayout>
</ScrollView>